--- a/ProyectoWeb/ProyectoWebApp/static/ProyectoWebApp/headers.css
+++ b/ProyectoWeb/ProyectoWebApp/static/ProyectoWebApp/headers.css
@@ -26,17 +26,22 @@
 }
 
 .p-2 {
-  background-color: #36096d;
-  background-image: linear-gradient(315deg, #37d5d6 0%, #36096d  74%);
+  background-color: #166d3b;
+background-image: linear-gradient(147deg, #000000 50%, #166d3b 100%);
+  
 
 }
-
+.lg img{
+  width: 130px;
+  margin: 0;
+  
+}
 .nav-link{
   position: relative;	
-	font-size: 16px;
-	color: white;
+	font-size: 18px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	color: rgb(255, 255, 255);
 	letter-spacing: 1px;
-	text-transform: uppercase;
 	-webkit-transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
 	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);	
 	cursor: pointer;
