--- a/ProyectoWeb/registroApp/static/style.css
+++ b/ProyectoWeb/registroApp/static/style.css
@@ -208,7 +208,7 @@ input {
   background: #fff;
   padding: 20px 0 4px;
   margin: 0 0 20px;
-  color: #ffffff;
+  color: #000000;
   border-radius: 10px;
 }
 input:focus {
