--- a/ProyectoWeb/ProyectoWebApp/static/ProyectoWebApp/headers.css
+++ b/ProyectoWeb/ProyectoWebApp/static/ProyectoWebApp/headers.css
@@ -26,8 +26,8 @@
 }
 
 .p-2 {
-  background-color: #166d3b;
-background-image: linear-gradient(147deg, #000000 50%, #166d3b 100%);
+  background-color: #36096d;
+  background-image: linear-gradient(315deg, #37d5d6 0%, #36096d  74%);
   
 
 }
@@ -78,19 +78,24 @@ background-image: linear-gradient(147deg, #000000 50%, #166d3b 100%);
 max-width: 100%;
 }
 
-p{
+/*p{
   font-family: Arial, Helvetica, sans-serif;
   text-align: justify;
-  padding: 30px;
+  padding: 20px;
+  border: red solid 1px;
+  margin-right: 20px;
+  margin-left: 10px;
   
 }
 h1{
-  padding-left: 20px;
+  margin-left: 10px;
+  border: red solid 1px;
 }
 h2{
-  padding-left: 20px;
+  margin-left: 10px;
+  border: red solid 1px;
 }
-.container{
+/*.container{
   display: grid;
   grid-template-columns: 75% 25%;
   grid-template-rows: 100%;
@@ -100,21 +105,66 @@ h2{
 .container:after {
   content: "";
   display: table;
-  clear: both;
-}
-.left {
+  clear: both;*/
+
+/* .left {
   float: left;
 }
 .right {
   float: right;
   background-color: rgb(255, 255, 255);
   border: black solid 1px;
-}
+}*/
+
 
 .containerfooter{
   
   margin-top: 100vh;
 }
-.dropdown-itemc{
- color: #36096d;
+.dropdown-menu{
+ background-color: #ffffff;
 }
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 30px;
+  overflow-y: hidden;
+  margin-top: 3px;
+  background-color: #2d34368c;
+
+
+}
+
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-top: -20px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  
+}
+
+.nav-scroller .nav .p-3{
+  font-size: 18px;
+  color: white;
+  text-decoration: none;
+}
+
+.bc{
+  font-size: 2.5rem;
+  background-color: rgba(0, 0, 0, 0.774);
+  margin-top: 20px;
+
+}
+
+.imag{
+  text-align: center;
+  float: right;
+  max-width: 40%;
+  
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+
