--- a/ProyectoWeb/ProyectoWebApp/templates/ProyectoWebApp/base.html
+++ b/ProyectoWeb/ProyectoWebApp/templates/ProyectoWebApp/base.html
@@ -39,13 +39,12 @@
 <body>
     
 
-
-<header class="p-2 mb-3 border-bottom">
+<header class="p-2 border-buttom">
     <div class="containern m-0 p-0">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         
         <div class="lg">
-          <a href="/home"><img src="{% static 'ProyectoWebApp/logo.png' %}"></a>
+          <a href="/home"><img src="{% static 'ProyectoWebApp/logo2.png' %}"></a>
         </div>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li class={% if request.path == '/home/' %} active {% endif %}><a href="{% url 'Home' %}" class="nav-link px-2">Inicio</a></li>
@@ -63,17 +62,20 @@
           </a>
           <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
             <li><a class="dropdown-item" href="#">Nueva publicación</a></li>
-            <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+            <li><a class="dropdown-item" href="/profile/">Mi perfil</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/register/">Registrarme</a></li>
-            <li><a class="dropdown-item" href="/login/">Iniciar Sesión</a></li>
+            {% if request.user.is_authenticated %}
             <li><a class="dropdown-item" href="/logout/">Cerrar Sesión</a></li>
+            {% else %}
+            <li><a class="dropdown-item" href="/login/">Iniciar Sesión</a></li>
+            <li><a class="dropdown-item" href="/register/">Crear Cuenta</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
     </div>
     
-  </header>
+</header>
 <script src="{% static 'ProyectoWebApp/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
 
 
