--- a/ProyectoWeb/ProfileApp/static/ProfileApp/css/style.css
+++ b/ProyectoWeb/ProfileApp/static/ProfileApp/css/style.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Open Sans', serif;
     padding-top: 54px;
-    color: #ffffff;
+    color: #000000;
 }
 
 @media (min-width: 992px) {
@@ -13,37 +13,16 @@ body {
     }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Saira Extra Condensed', serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #ffffff;
-}
 
 h1 {
     font-size: 6rem;
     line-height: 5.5rem;
+    color: rgb(0, 0, 0);
     
 }
 
 h2 {
     font-size: 3.5rem;
-}
-
-
-a {
-    color: #2196f3;
-}
-
-a:hover,
-a:focus,
-a:active {
-    color: #0f72c1;
 }
 
 p{
@@ -61,11 +40,11 @@ p{
                   SOCIAL-ICON
 ====================================================*/
   .list-social-icons a {
-      color: #495057;
+      color: #36096d;
   }
 
   .list-social-icons a:hover {
-      color: #2196f3;
+      color: #7546ad85;
   }
 
   .list-social-icons a .fa-lg {
@@ -77,7 +56,7 @@ p{
   }
 
   .list-icons .list-inline-item i:hover {
-      color: #2196f3;
+      color: #ffffff;
   }
 
 /*==================================================
@@ -86,7 +65,7 @@ p{
   #sideNav .navbar-nav .nav-item .nav-link {
       font-weight: 600;
       text-transform: uppercase;
-      color: rgb(255, 255, 255);
+      color: rgb(0, 0, 0);
   }
 
   @media (min-width: 992px) {
@@ -108,7 +87,7 @@ p{
       #sideNav .navbar-brand .img-profile {
           max-width: 10rem;
           max-height: 10rem;
-          border: 0.5rem solid rgba(255, 255, 255, 0.418);
+          border: 0.5rem solid #36096d;
       }
       #sideNav .navbar-collapse {
           display: flex;
@@ -128,46 +107,6 @@ p{
           display: block;
       }
   }
-
-/*==================================================
-                  BUTTON (Generic)
-====================================================*/
-
-.btn-general {
-    background-color: transparent;
-    text-align: center;
-    border-width: 1px;
-    border-radius: 0px;
-    font-size: 16px;
-    padding: 10px 15px;
-    font-weight: 400;
-    text-transform: uppercase;
-}
-
-.btn-white {
-    border-color: #2196f3;
-    background-color: #2196f3;
-    color: #fff;
-}
-
-.btn-white:hover,
-.btn-white:focus {
-    background-color: transparent;
-    color: #2196f3;
-    cursor: pointer;
-}
-
-.btn-green {
-    border-color: #2196f3;
-    color: #2196f3;
-}
-
-.btn-green:hover,
-.btn-green:focus {
-    background-color: #2196f3;
-    color: #fff;
-    cursor: pointer;
-}
 
 /*==================================================
                   SECTION (Generic)
@@ -206,8 +145,7 @@ p{
   }
 
  #sideNav{
-    background-color: #36096d;
-  background-image: linear-gradient(315deg, #37d5d6 0%, #36096d  74%);
+    background-color: #7546ad85;
  }
 
   .text-primary {
@@ -218,12 +156,13 @@ p{
                       ABOUT
 ====================================================*/
 #about {
-    background-color: #000000; 
-    background-image: linear-gradient(315deg, #000000 0%, #ffffff 74%);
-
-    background-size: cover;
+    background-color:#7546ad85;
     background-position: center center;
     background-repeat: no-repeat;
+    padding-top: 100px;
+    font-family: 'Open Sans'
+    
+  
   }
 
  
@@ -233,15 +172,48 @@ p{
 ====================================================*/  
   #experience {
     background: #ffffff;
+    margin-top: 500px;
   }
 
   #experience .card h4{
     font-family: 'Roboto Condensed', sans-serif;
     text-transform: none;
   }
-<<<<<<< HEAD
-=======
 
+.mb-0, .mb-5{
+    padding-left: 70px;
+}
+.mb-5{
+    padding-top: 10px;
+}
+.heading-border{
+    background-color: #36096d;
+}
 
- 
->>>>>>> 732b6feb14bda8c0de7b1637c5c386b277fa1276
+.list-inline{
+    margin-left: 70px;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+.nav-back a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    display: inline-block;
+    border: 1px solid rgb(0, 0, 0);
+    margin-top: 30px;
+    width: 150px;
+    border-radius: 50px;
+    text-align: center;
+    padding: 8px 0;
+    font-size: 15px;
+  }
+
+  .nav-back a:hover{
+    text-decoration: none;
+    background-color: #36096d;
+    color: rgb(255, 255, 255);
+    
+  }
