--- a/ProyectoWeb/ProfileApp/templates/index.html
+++ b/ProyectoWeb/ProfileApp/templates/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -43,8 +42,12 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#about">Sobre mí</a>
                 </li>
+                <li><hr class="divider"></li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#experience">Mis Publicaciones</a>
+                </li>
+                <li class="nav-back">
+                  <a href="/home/">Volver al Blog </a> 
                 </li>
                 
             </ul>
@@ -58,112 +61,104 @@
     ======================================================-->
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
           <div class="my-auto" >
-<<<<<<< HEAD
-              <h1 class="mb-0" id="username">
-=======
-              <h1 class="mb-0">
->>>>>>> 732b6feb14bda8c0de7b1637c5c386b277fa1276
-                @{{ user.username }}
+              <h1 class="mb-0" id="username" style="text-transform:uppercase;">
+
+
+		           <strong>@{{user.username}}</strong>
       
               </h1>
               <p class="mb-5" style="max-width: 500px;" >I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
               <ul class="list-inline list-social-icons mb-0">
-                  <li class="list-inline-item">
-                      <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-                  </li>
-                  <li class="list-inline-item">
-                      <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-                  </li>
-                  <li class="list-inline-item">
-                      <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-                  </li>
-                  <li class="list-inline-item">
-                      <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-                  </li>
-              </ul>
+                <li class="list-inline-item">
+                    <a href="https://es-la.facebook.com/" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://twitter.com/i/flow/login" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://ar.linkedin.com/" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://github.com/" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+                </li>
+            </ul>
           </div>
       </section>
 
     <!--====================================================
                         MIS Publicaciones
     ======================================================-->      
-      <section class="resume-section p-3 p-lg-5 " id="experience">
-          <div class="row my-auto">
-              <div class="col-12">
-                <h2 class="  text-center">Mis Publicaciones</h2>
-                <div class="mb-5 heading-border"></div>
-              </div>
-              <div class="resume-item col-md-6 col-sm-12 " > 
-                <div class="card mx-0 p-4 mb-5" style="color: #000000; background-color: white; border-color: #36096d; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
-                  <div class=" resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Senior Web Developer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                  </div>
-                  <div class="resume-date text-md-right">
-                      <span class="text-primary">March 2019 - Present</span>
-                  </div>
-                </div>  
-              </div>
-              <div class="resume-item col-md-6 col-sm-12">
-                <div class="card mx-0 p-4 mb-5" style="color: #000000; background-color: white; border-color: #36096d; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
-                  <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Web Developer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                  </div>
-                  <div class="resume-date text-md-right">
-                      <span class="text-primary">December 2018 - March 2019</span>
-                  </div>
-                </div>  
-              </div>
-              <div class="resume-item col-md-6 col-sm-12">
-                <div class="card mx-0 p-4 mb-5" style="color: #000000; background-color: white; border-color: #36096d; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
-                  <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Junior Web Designer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                  </div>
-                  <div class="resume-date text-md-right">
-                      <span class="text-primary">July 2017 - December 2018</span>
-                  </div>
-                </div>  
-              </div>
-              <div class="resume-item col-md-6 col-sm-12">
-                <div class="card mx-0 p-4 mb-5" style="color: #000000; background-color: white; border-color: #36096d; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
-                  <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i> Web Design Intern</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                  </div>
-                  <div class="resume-date text-md-right">
-                      <span class="text-primary">September 2018 - June 2019</span>
-                  </div>
-                </div>  
-              </div>
+    <section class="resume-section p-3 p-lg-5 " id="experience">
+      <div class="row my-auto">
+          <div class="col-12">
+            <h2 class="  text-center">Mis Publicaciones</h2>
+            <div class="mb-5 heading-border"></div>
           </div>
-      </section>
-
-
-
-
-  
+          <div class="resume-item col-md-6 col-sm-12 " > 
+            <div class="card mx-0 p-4 mb-5" style="color: #000000; background-color: white; border-color: #36096d; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+              <div class=" resume-content mr-auto">
+                  <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> POSTEO 1</h4>
+                  <p></p>
+              </div>
+              <div class="resume-date text-md-right">
+                  <span class="text-primary">MAYO 2021</span>
+              </div>
+            </div>  
+          </div>
+          <div class="resume-item col-md-6 col-sm-12">
+            <div class="card mx-0 p-4 mb-5" style="color: #000000; background-color: white; border-color: #36096d; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+              <div class="resume-content mr-auto">
+                  <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>POSTEO 2</h4>
+                  <p></p>
+              </div>
+              <div class="resume-date text-md-right">
+                  <span class="text-primary">MarZO 2019</span>
+              </div>
+            </div>  
+          </div>
+          <div class="resume-item col-md-6 col-sm-12">
+            <div class="card mx-0 p-4 mb-5" style="color: #000000; background-color: white; border-color: #36096d; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+              <div class="resume-content mr-auto">
+                  <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i>POSTEO 3</h4>
+                  <p></p>
+              </div>
+              <div class="resume-date text-md-right">
+                  <span class="text-primary">DICIEMBRE 2018</span>
+              </div>
+            </div>  
+          </div>
+          <div class="resume-item col-md-6 col-sm-12">
+            <div class="card mx-0 p-4 mb-5" style="color: #000000; background-color: white; border-color: #36096d; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+              <div class="resume-content mr-auto">
+                  <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i>POSTEO 4</h4>
+                  <p></p>
+              </div>
+              <div class="resume-date text-md-right">
+                  <span class="text-primary">JULIO 2020</span>
+              </div>
+            </div>  
+          </div>
+      </div>
+  </section>
 </body>
-
 </html>
