--- a/ProyectoWeb/PostApp/templates/destacados.html
+++ b/ProyectoWeb/PostApp/templates/destacados.html
@@ -1,7 +1,6 @@
 {% extends 'ProyectoWebApp/base.html' %}
 {%load static%}
 
-
 {%block content%}
 <header class="p-2 border-buttom">
     <div class="containern m-0 p-0">
@@ -11,10 +10,9 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li class={% if request.path == '/home/' %} active {% endif %}><a href="{% url 'Home' %}" class="nav-link px-2">Inicio</a></li>
           <li class={% if request.path == '/categorias/' %} active {% endif %}><a href="{% url 'Categorias' %}" class="nav-link px-2">Categorias</a></li>
-          <li class={% if request.path == '/populares/' %} active {% endif %}><a href="{% url 'Populares' %}" class="nav-link px-2">Mas Populares</a></li>
       
         </ul>
-        
+     
 
         <form action= "/resultado_busqueda/" method= "GET" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
       
@@ -41,22 +39,23 @@
     </div>
     
 </header>
-<div class="nav-scroller py-1 mb-2">
-    <nav class="nav d-flex justify-content-between">
-        <a class="p-3 link-secondary" href="#">World</a>
-        <a class="p-3 link-secondary" href="#">U.S.</a>
-        <a class="p-3 link-secondary" href="#">Technology</a>
-        <a class="p-3 link-secondary" href="#">Design</a>
-        <a class="p-3 link-secondary" href="#">Culture</a>
-        <a class="p-3 link-secondary" href="#">Business</a>
-        <a class="p-3 link-secondary" href="#">Politics</a>
-        <a class="p-3 link-secondary" href="#">Opinion</a>
-        <a class="p-3 link-secondary" href="#">Science</a>
-        <a class="p-3 link-secondary" href="#">Health</a>
-        <a class="p-3 link-secondary" href="#">Style</a>
-        <a class="p-3 link-secondary" href="#">Travel</a>
-    </nav>
-</div>
+
+    <div class="nav-scroller py-4">
+      <nav class="nav ">
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=pobreza">Pobreza</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Hambre">Hambre</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Salud">Salud</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Educacion">Educacion</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Igualdad de genero">Igualdad de genero</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Agua">Agua<Agua/a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Energía">Energía</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Economía">Economía</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Infraestructura">Infraestructura</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Desigualdad">Desigualdad</a><br>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Ciudades">Ciudades</a>
+          <a class="p-3 link-secondary" href="/resultado_categoria/?Categoria=Consumo">Consumo</a>
+      </nav>
+  </div>
       
   
 {% endblock %}
