--- a/ProyectoWeb/PostApp/templates/resultado.html
+++ b/ProyectoWeb/PostApp/templates/resultado.html
@@ -4,94 +4,130 @@
 
 <head>
     
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>POSTS</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Blog Post - Start Bootstrap Template</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Core theme CSS (includes Bootstrap)-->
         {% load static %}
-        <link href="{% static 'css/style.css' %}" rel="stylesheet">
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     
 </head>
+<nav class="p-2 border-buttom">
+    <div class="containern m-0 p-0">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        
+        
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li class={% if request.path == '/home/' %} active {% endif %}><a href="{% url 'Home' %}" class="nav-link px-2">Inicio</a></li>
+          <li class={% if request.path == '/categorias/' %} active {% endif %}><a href="{% url 'Categorias' %}" class="nav-link px-2">Categorias</a></li>
+      
+        </ul>
+        
+      </div>
+    </div>
+    
+</nav>
 {%if categoria%}
 {%for post in categoria %}
 <body>
-
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <div class="container">
-    <div class="col-md-7">
-        <div class="social-feed-separated">
-            <div class="social-avatar">
-                <a href="">
-                    <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
-                </a>
-            </div>
-            <div class="social-feed-box">
-                <div>
-                    <a href="#"><h2 class="userp">{{post.user.username}}</h2></a>
-                    <small class="text-muted"><time>{{post.fecha}}</time> CATEGORIA: <a href="">{{post.categoria}}</a></small>
-                </div>
-
-                <div> 
-                    <h1>{{post.titulo}}</h1>
-                    <img src="{{post.image.url}}" id="cg" alt="img">
-                </div>    
-                    
-                <div class="social-body">
-                    <p> {{post.texto}} </p>
-                </div>
-                    
-               
-                <div class="btn-group">
-                    <button class="btn btn-white btn-xs"><i class="fa fa-thumbs-up"></i> Like this!</button>
-                    <button class="btn btn-white btn-xs"><i class="fa fa-comments"></i> Comment</button>
-                    <button class="btn btn-white btn-xs"><i class="fa fa-share"></i> Share</button>
-                </div>
-
-            </div>
-
-            <div class="social-footer">
-                <div class="social-comment">
-                    <a href="" class="pull-left">
-                        <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar2.png">
-                    </a>
-                    <div class="media-body">
-                        <a href="#">
-                            Andrew Williams
-                        </a>
-                        Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words.
-                        <br>
-                        <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 26 Like this!</a> -
-                        <small class="text-muted">12.06.2014</small>
-                    </div>
-                </div>
-
-                <div class="social-comment">
-                    <a href="" class="pull-left">
-                        <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar3.png">
-                    </a>
-                    <div class="media-body">
-                        <a href="#">
-                            Andrew Williams
-                        </a>
-                        Making this the first true generator on the Internet. It uses a dictionary of.
-                        <br>
-                        <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 11 Like this!</a> -
-                        <small class="text-muted">10.07.2014</small>
-                    </div>
-                </div>
-
-                <div class="social-comment">
-                    <a href="" class="pull-left">
-                        <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar3.png">
-                    </a>
-                    <div class="media-body">
-                        <textarea class="form-control" placeholder="Write comment..."></textarea>
-                    </div>
-                </div>
-            </div>
+  <!-- Responsive navbar-->
+  <header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">{{post.categoria}}</h1>
+            <p class="lead fw-normal text-white-50 mb-0">INFO 2021</p>
         </div>
     </div>
+</header>
+
+<!-- Page content-->
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-8">
+            <!-- Post content-->
+            <article>
+                <!-- Post header-->
+                <header class="mb-4">
+                    <!-- Post title-->
+                    <h1 class="fw-bolder mb-1">{{post.titulo}}</h1>
+                    <!-- Post meta content-->
+                    <div class="text-muted fst-italic mb-2">Post Creado por: {{post.user.username}} </div>
+                    <div class="text-muted fst-italic mb-2">Fecha de creación: <time> {{post.fecha}} </time></div>
+                    <!-- Post categories-->
+                    <div class="text-muted fst-italic mb-2">Categoria: </div>
+                    <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{post.categoria}}</a>
+                </header>
+                <!-- Preview image figure-->
+                <figure class="mb-4"><img class="img-fluid rounded" src="{{post.image.url}}" alt="img" /></figure>
+                <!-- Post content-->
+                <section class="mb-5">
+                    <p class="fs-5 mb-4">{{post.texto}}</p>
+                </section>
+            </article>
+            <!-- Comments section-->
+            <section class="mb-5">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <!-- Comment form-->
+                        <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Haz un comentario!"></textarea></form>
+                        <!-- Comment with nested comments-->
+                        <div class="d-flex mb-4">
+                            <!-- Parent comment-->
+                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                            <div class="ms-3">
+                                <div class="fw-bold">Commenter Name</div>
+                                If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
+                                <!-- Child comment 1-->
+                                <div class="d-flex mt-4">
+                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                    <div class="ms-3">
+                                        <div class="fw-bold">Commenter Name</div>
+                                        And under those conditions, you cannot establish a capital-market evaluation of that enterprise. You can't get investors.
+                                    </div>
+                                </div>
+                                <!-- Child comment 2-->
+                                <div class="d-flex mt-4">
+                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                    <div class="ms-3">
+                                        <div class="fw-bold">Commenter Name</div>
+                                        When you put money directly to a problem, it makes a good headline.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Single comment-->
+                        <div class="d-flex">
+                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                            <div class="ms-3">
+                                <div class="fw-bold">Commenter Name</div>
+                                When I look at the universe and all the ways the universe wants to kill us, I find it hard to reconcile that with statements of beneficence.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        
+    </div>
+</div>
+    
+
+
 {%endfor%}
+    <nav class="blog-pagination" aria-label="Pagination">
+    <a class="btn btn-outline-primary" href="#">volver arriba</a>
+    </nav>
+    <hr>
+    <hr>
 {%endif%}
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
 
 
 </body>
